runoff/root_docs_txt/part_0001/build_output_6.txt
[  1%] Building CXX object CMakeFiles/RawrEngine.dir/src/cpu_inference_engine.cpp.obj
D:\rawrxd\src\cpu_inference_engine.cpp:24:51: error: invalid use of incomplete type 'class RawrXD::IMemoryPlugin'
   24 |     class StandardMemoryPlugin : public ::RawrXD::IMemoryPlugin {
      |                                                   ^~~~~~~~~~~~~
In file included from D:\rawrxd\src\cpu_inference_engine.cpp:1:
D:\rawrxd\src\cpu_inference_engine.h:15:11: note: forward declaration of 'class RawrXD::IMemoryPlugin'
   15 |     class IMemoryPlugin;
      |           ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:26:21: error: 'std::string RawrXD::StandardMemoryPlugin::GetName() const' marked 'override', but does not override
   26 |         std::string GetName() const override { return "Standard"; }
      |                     ^~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:27:16: error: 'size_t RawrXD::StandardMemoryPlugin::GetMaxContext() const' marked 'override', but does not override
   27 |         size_t GetMaxContext() const override { return 4096; }
      |                ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:28:14: error: 'bool RawrXD::StandardMemoryPlugin::Configure(size_t)' marked 'override', but does not override
   28 |         bool Configure(size_t) override { return true; }
      |              ^~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:29:14: error: 'bool RawrXD::StandardMemoryPlugin::Optimize()' marked 'override', but does not override
   29 |         bool Optimize() override { return true; }
      |              ^~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:32:49: error: invalid use of incomplete type 'class RawrXD::IMemoryPlugin'
   32 |     class LargeContextPlugin : public ::RawrXD::IMemoryPlugin {
      |                                                 ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:15:11: note: forward declaration of 'class RawrXD::IMemoryPlugin'
   15 |     class IMemoryPlugin;
      |           ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:34:21: error: 'std::string RawrXD::LargeContextPlugin::GetName() const' marked 'override', but does not override
   34 |         std::string GetName() const override { return "LargeContext"; }
      |                     ^~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:35:16: error: 'size_t RawrXD::LargeContextPlugin::GetMaxContext() const' marked 'override', but does not override
   35 |         size_t GetMaxContext() const override { return 32768; }
      |                ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:36:14: error: 'bool RawrXD::LargeContextPlugin::Configure(size_t)' marked 'override', but does not override
   36 |         bool Configure(size_t) override { return true; }
      |              ^~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:37:14: error: 'bool RawrXD::LargeContextPlugin::Optimize()' marked 'override', but does not override
   37 |         bool Optimize() override { return true; }
      |              ^~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h: In constructor 'CPUInference::CPUInferenceEngine::CPUInferenceEngine()':
D:\rawrxd\src\cpu_inference_engine.h:135:9: warning: 'CPUInference::CPUInferenceEngine::m_vocabSize' will be initialized after [-Wreorder]
  135 |     int m_vocabSize = 0;
      |         ^~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:132:9: warning:   'int CPUInference::CPUInferenceEngine::m_embeddingDim' [-Wreorder]
  132 |     int m_embeddingDim = 0;
      |         ^~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:53:1: warning:   when initialized here [-Wreorder]
   53 | CPUInferenceEngine::CPUInferenceEngine()
      | ^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:134:9: warning: 'CPUInference::CPUInferenceEngine::m_numHeads' will be initialized after [-Wreorder]
  134 |     int m_numHeads = 0;
      |         ^~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.h:124:9: warning:   'int CPUInference::CPUInferenceEngine::m_threadCount' [-Wreorder]
  124 |     int m_threadCount = 1;
      |         ^~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:53:1: warning:   when initialized here [-Wreorder]
   53 | CPUInferenceEngine::CPUInferenceEngine()
      | ^~~~~~~~~~~~~~~~~~
In file included from C:/ProgramData/mingw64/mingw64/lib/gcc/x86_64-w64-mingw32/15.2.0/include/c++/memory:80,
                 from D:\rawrxd\src\cpu_inference_engine.h:5:
C:/ProgramData/mingw64/mingw64/lib/gcc/x86_64-w64-mingw32/15.2.0/include/c++/bits/unique_ptr.h: In instantiation of 'void std::default_delete<_Tp>::operator()(_Tp*) const [with _Tp = RawrXD::BPETokenizer]':
C:/ProgramData/mingw64/mingw64/lib/gcc/x86_64-w64-mingw32/15.2.0/include/c++/bits/unique_ptr.h:399:17:   required from 'std::unique_ptr<_Tp, _Dp>::~unique_ptr() [with _Tp = RawrXD::BPETokenizer; _Dp = std::default_delete<RawrXD::BPETokenizer>]'
  399 |           get_deleter()(std::move(__ptr));
      |           ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp:55:53:   required from here
   55 |       m_numLayers(0), m_numHeads(0), m_threadCount(1)
      |                                                     ^
C:/ProgramData/mingw64/mingw64/lib/gcc/x86_64-w64-mingw32/15.2.0/include/c++/bits/unique_ptr.h:91:23: error: invalid application of 'sizeof' to incomplete type 'RawrXD::BPETokenizer'
   91 |         static_assert(sizeof(_Tp)>0,
      |                       ^~~~~~~~~~~
D:\rawrxd\src\cpu_inference_engine.cpp: At global scope:
D:\rawrxd\src\cpu_inference_engine.cpp:48:17: warning: 'Metrics& CPUInference::EngineMetrics()' defined but not used [-Wunused-function]
   48 | static Metrics& EngineMetrics() {
      |                 ^~~~~~~~~~~~~
mingw32-make[2]: *** [CMakeFiles\RawrEngine.dir\build.make:169: CMakeFiles/RawrEngine.dir/src/cpu_inference_engine.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:89: CMakeFiles/RawrEngine.dir/all] Error 2
mingw32-make: *** [Makefile:90: all] Error 2
